--- a/index.html
+++ b/index.html
@@ -10,23 +10,26 @@
    <body>
       <div class="container">
          <div class="calculator">
-            <div class="screen">1234567890</div>
-            <div class="btn">7</div>
-            <div class="btn">8</div>
-            <div class="btn">9</div>
+            <div class="screen"></div>
+            <div class="btn">C</div>
+            <div class="btn"></div>
+            <div class="btn"></div>
             <div class="btn">&divide;</div>
-            <div class="btn">4</div>
-            <div class="btn">5</div>
-            <div class="btn">6</div>
+            <div class="btn" onclick="NumberClick(this)">7</div>
+            <div class="btn" onclick="NumberClick(this)">8</div>
+            <div class="btn" onclick="NumberClick(this)">9</div>
             <div class="btn">&times;</div>
-            <div class="btn">1</div>
-            <div class="btn">2</div>
-            <div class="btn">3</div>
+            <div class="btn" onclick="NumberClick(this)">4</div>
+            <div class="btn" onclick="NumberClick(this)">5</div>
+            <div class="btn" onclick="NumberClick(this)">6</div>
+            <div class="btn">+</div>
+            <div class="btn" onclick="NumberClick(this)">1</div>
+            <div class="btn" onclick="NumberClick(this)">2</div>
+            <div class="btn" onclick="NumberClick(this)">3</div>
             <div class="btn">-</div>
             <div class="btn btm-l">.</div>
-            <div class="btn">0</div>
-            <div class="btn">=</div>
-            <div class="btn btm-r">+</div>
+            <div class="btn" onclick="NumberClick(this)">0</div>
+            <div class="btn btm-r" id="eql-btn">=</div>
          </div>
       </div>
    </body>
