--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="container">
          <div class="calculator">
             <div class="screen"></div>
-            <div class="btn">C</div>
+            <div class="btn" onclick="ClearClick()">C</div>
             <div class="btn"></div>
             <div class="btn"></div>
             <div class="btn">&divide;</div>
