--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="btn" onclick="NumberClick(this)">2</div>
             <div class="btn" onclick="NumberClick(this)">3</div>
             <div class="btn" onclick="OperatorClick(this)">-</div>
-            <div class="btn btm-l">.</div>
+            <div class="btn btm-l" onclick="DecimalClick()">.</div>
             <div class="btn" onclick="NumberClick(this)">0</div>
             <div class="btn btm-r" id="eql-btn" onclick="EqualsClick()">=</div>
          </div>
