Fixed backspace button style

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
          <div class="calculator">
             <div class="screen"></div>
             <div class="btn operator" id="cancel-btn" onclick="ClearClick()">C</div>
-            <div class="btn operator" onclick="BackspaceClick()">&leftarrow;</div>
+            <div class="btn operator" id="backspace-btn" onclick="BackspaceClick()">&leftarrow;</div>
             <div class="btn" style="background-color:#CCC"></div>
             <div class="btn operator" onclick="OperatorClick(this)">&divide;</div>
             <div class="btn" onclick="NumberClick(this)">7</div>
