Added keyboard support

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta chartype="UTF-8">
       <title>The Odin Project - Calculator</title>
       <link rel="stylesheet" href="./css/style.css">
-      <script src="./js/main.js"></script>
+      <script src="./js/main.js" defer></script>
    </head>
 
    <body>
