Added CSS styles for keypresses

--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
       <div class="container">
          <div class="calculator">
             <div class="screen"></div>
-            <div class="btn operator" id="cancel-btn" onclick="ClearClick()">C</div>
-            <div class="btn operator" id="backspace-btn" onclick="BackspaceClick()">&leftarrow;</div>
+            <div class="btn cancel-btn operator" id="cancel-btn" onclick="ClearClick()">C</div>
+            <div class="btn backspace-btn operator" id="backspace-btn" onclick="BackspaceClick()">&leftarrow;</div>
             <div class="btn" style="background-color:#CCC"></div>
-            <div class="btn operator" onclick="OperatorClick(this)">&divide;</div>
-            <div class="btn" onclick="NumberClick(this)">7</div>
-            <div class="btn" onclick="NumberClick(this)">8</div>
-            <div class="btn" onclick="NumberClick(this)">9</div>
-            <div class="btn operator" onclick="OperatorClick(this)">&times;</div>
-            <div class="btn" onclick="NumberClick(this)">4</div>
-            <div class="btn" onclick="NumberClick(this)">5</div>
-            <div class="btn" onclick="NumberClick(this)">6</div>
-            <div class="btn operator" onclick="OperatorClick(this)">+</div>
-            <div class="btn" onclick="NumberClick(this)">1</div>
-            <div class="btn" onclick="NumberClick(this)">2</div>
-            <div class="btn" onclick="NumberClick(this)">3</div>
-            <div class="btn operator" onclick="OperatorClick(this)">-</div>
-            <div class="btn btm-l" onclick="DecimalClick()">.</div>
-            <div class="btn" onclick="NumberClick(this)">0</div>
-            <div class="btn btm-r operator" id="eql-btn" onclick="EqualsClick()">=</div>
+            <div class="btn operator-btn" onclick="OperatorClick(this)">&divide;</div>
+            <div class="btn number-btn" onclick="NumberClick(this)">7</div>
+            <div class="btn number-btn" onclick="NumberClick(this)">8</div>
+            <div class="btn number-btn" onclick="NumberClick(this)">9</div>
+            <div class="btn operator-btn" onclick="OperatorClick(this)">&times;</div>
+            <div class="btn number-btn" onclick="NumberClick(this)">4</div>
+            <div class="btn number-btn" onclick="NumberClick(this)">5</div>
+            <div class="btn number-btn" onclick="NumberClick(this)">6</div>
+            <div class="btn operator-btn" onclick="OperatorClick(this)">+</div>
+            <div class="btn number-btn" onclick="NumberClick(this)">1</div>
+            <div class="btn number-btn" onclick="NumberClick(this)">2</div>
+            <div class="btn number-btn" onclick="NumberClick(this)">3</div>
+            <div class="btn operator-btn" onclick="OperatorClick(this)">-</div>
+            <div class="btn number-btn btm-l" onclick="DecimalClick()">.</div>
+            <div class="btn number-btn" onclick="NumberClick(this)">0</div>
+            <div class="btn btm-r eql-btn" id="eql-btn" onclick="EqualsClick()">=</div>
          </div>
       </div>
    </body>
