Added a toggle negative button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="screen"></div>
             <div class="btn cancel-btn operator" id="cancel-btn" onclick="ClearClick()">C</div>
             <div class="btn backspace-btn operator" id="backspace-btn" onclick="BackspaceClick()">&leftarrow;</div>
-            <div class="btn" style="background-color:#CCC"></div>
+            <div class="btn toggle-neg-btn" onclick="ToggleNegative()">+/-</div>
             <div class="btn operator-btn" onclick="OperatorClick(this)">&divide;</div>
             <div class="btn number-btn" onclick="NumberClick(this)">7</div>
             <div class="btn number-btn" onclick="NumberClick(this)">8</div>
